fix: doc generation
